--- a/home.html
+++ b/home.html
@@ -76,15 +76,14 @@
         <img src="https://cdn.prod.website-files.com/64022de562115a8189fe542a/663b9b70ff53a383fc50eea2_Feedback-Culture-Exploring-Its-Purpose-Benefits-And-How-To-Build-One.jpg" height="250px" width="500px" alt="FEEDBACK MATTERS"></img>
 <br><BR><BR>
 
-<form action="your_php_file.php" method="post">
-<button class="btn" style="color:#191970;font-family:times new roman;font-size:18px;" type="submit" name="submit"><strong>ADMIN LOGIN</strong></button> 
-</form>
-  <button class="btn" style="color:#191970;font-family:times new roman;font-size:18px;"><strong>FACULTY LOGIN</strong></button>
+<button class="btn" style="color:#191970;font-family:times new roman;font-size:18px;" type="submit" name="submit"><strong>STUDENT FEEDBACK</strong></button> 
+
+  <button class="btn" style="color:#191970;font-family:times new roman;font-size:18px;"><strong>FACULTY FEEDBACK</strong></button>
     </section>
 
     <!-- Footer Section -->
     <footer>
-       
+       <B>THANL YOU	</B>
     </footer>
 </body>
 </html>
